--- a/KaraokeGenerator/app/build.gradle
+++ b/KaraokeGenerator/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile "commons-io:commons-io:+"
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.2.0'
+    compile 'com.google.code.gson:gson:2.6.2'
+
 }
